portfolio and contact files have been modified

--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
+<html lang="en-us">
+
+
 <head>
+    <meta charset="UTF-8">
     <title>index</title>
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
@@ -8,50 +12,34 @@
 <header>
 
 
-<div id="heading">violeta
+<div id="heading"> Violeta Meliton
 
 </div>
 <div id="headingTwo">
      <div id="boxhead">
 
-     <a href="#" >about</a> | <a href="#">Portfolio</a>| <a href="#">contact</a>
+     <a href="index.html" >About</a> | <a href="portfolio.html">Portfolio</a>| <a href="contact.html">Contact</a>
 
      </div>   
     
 
-</div>
+</div> 
 
 </header>
 <section id="full">
-    <aside style="height: 600px; ">
-        <div id="miniHeader2">bio</div>
+    <aside style="height: 500px; ">
+        <div id="miniHeader2">About Me</div>
         <img src="assets/images/image1.jpg" alt="image1" id="image1">
-        <p>mkkjkjiodsjfaioujfdisnauidsu
-            asiudfiaua          oudsfifkn     dfhiugihgkjfioi  oajfmcjihhafhaihf</p>
+        <p> My name is Violeta Meliton. I am really excited to be in this course. I currently work at
+            a manufacturing company as a Production Planner, but want to change career paths. I have
+            been divorced for almost three years and have two beautiful daughters who are 8 and 6
+            years old. My daughters are the reason I want to have a succesfull carrer and job. I want
+            to be an example and role model for them. 
+         </p>
     </aside>
 
-    <div id="division">
-        <div id="miniHeader">
-            contact
-        </div>
-        <div id="github">
-            <a href="https://github.com/VioletaMeliton/Basic-Portfolio">
-                <img src="assets/images/image2.png" alt="github" style="width: 40px; height: 40px;">
-            </a>
-        </div>
-        <div id="linkedin">
-                <a href="https://www.linkedin.com/in/violeta-meliton-228a93180/">
-                    <img src="assets/images/image3.png" alt="linkedin" style="width: 40px; height: 40px;">
-                </a>
-            </div>
-            <div id="stackoverflow">
-                    <a href="https://stackoverflow.com/users/11152783/violeta-meliton">
-                        <img src="assets/images/image4.jpg" alt="stackoverflow" style="width: 40px; height: 40px;">
-                    </a>
-                </div>
-
-    </div> 
+    
 </section>
- <footer>violeta Meliton</footer>
+ <footer>copyright</footer>
 </body>
 </html>
